Support JEP 396: Strongly Encapsulate JDK Internals by Default